# ec-gpu

ec-gpu-gen/: Cargo.toml
ec-gpu-gen/src/: fft.rs  lib.rs  multiexp.rs  source.rs
ec-gpu-gen/src/cl/: ec.cl  fft.cl  multiexp.cl
